# smc-project

./: .gitignore  README.md  Real-Time Sound Event Detection with PANNs and YAMNet.ipynb  app.py  config.yaml  download_models.py  finetune_demo.py  label_tiers.json  labels.jsonl  pyproject.toml  realtime_solo.py  record_sound.py  requirements.txt  setup.ipynb
ast/pretrained_models/: Cnn14_DecisionLevelMax.pth  VGGish_ckpt_epoch_88.pt
ast/src/models/: ast_models.py
data/: custom_label.json  stream_preds_sample.jsonl
runs/: stream_preds.jsonl  stream_preds_summary.json
scripts/: convert_audioset_tfrecord_to_npz.py  download_audioset_wavs.py  download_models.py  finetune_panns.py  finetune_vggish.py  user_label_finetune.py
utils/: download_audioset_wavs.py  download_models.py  eval_embeddings_classifier.py  finetune_panns_custom.py  finetune_vggish_from_raw.py  train_embeddings_classifier.py
